human_written_tests/WebAssembly/processed_control_flow_validation/test_if_80.wast
(assert_invalid
  (module
    (func $type-condition-empty-in-loop
      (i32.const 0)
      (loop (if (then)))
    )
  )
  "type mismatch"
)